test/langtools/tools/javac/valhalla/lworld-values/CheckValueModifier.out
CheckValueModifier.java:18:14: compiler.err.illegal.combination.of.modifiers: interface, inline
CheckValueModifier.java:19:15: compiler.err.illegal.combination.of.modifiers: interface, inline
CheckValueModifier.java:20:14: compiler.err.mod.not.allowed.here: inline
CheckValueModifier.java:21:23: compiler.err.illegal.combination.of.modifiers: abstract, inline
CheckValueModifier.java:15:18: compiler.err.mod.not.allowed.here: inline
CheckValueModifier.java:16:18: compiler.err.mod.not.allowed.here: inline
6 errors
